--- a/test/config.yml
+++ b/test/config.yml
@@ -46,12 +46,14 @@ TaskDef:
         image: 066703160259.dkr.ecr.us-east-2.amazonaws.com/inno/test:0.3
         hardMemory: 300
         softMemory: 200
-        portMapping: 80:80
+        portMappings:
+          - 80:80
       - name: jameson-hello
         image: 066703160259.dkr.ecr.us-east-2.amazonaws.com/inno/test:0.2
         hardMemory: 300
         softMemory: 200
-        portMapping: 8080:8080
+        portMappings:
+          - 8080:8080
 
 # Provisioning Model: onDemand, spot
 Cluster:
