--- a/elb-info.yaml
+++ b/elb-info.yaml
@@ -1,8 +1,13 @@
 ELB:
-  LoadBalance: {DNSName: sean-sdk-elb-1358028048.us-east-2.elb.amazonaws.com, listenerArn: 'arn:aws:elasticloadbalancing:us-east-2:066703160259:listener/app/sean-sdk-elb/4d56df922263f1ba/91620dc4574a9a93',
-    loadBalancerArn: 'arn:aws:elasticloadbalancing:us-east-2:066703160259:loadbalancer/app/sean-sdk-elb/4d56df922263f1ba'}
+  LoadBalance: {DNSName: sean-sdk-elb-1083191543.us-east-2.elb.amazonaws.com, loadBalancerArn: 'arn:aws:elasticloadbalancing:us-east-2:066703160259:loadbalancer/app/sean-sdk-elb/f270f4e8b3f5fc0b'}
   TargetGroup:
-    targetGroupArn: arn:aws:elasticloadbalancing:us-east-2:066703160259:targetgroup/sean-sdk-target/3d0ee8c05e9579ee
+  - listenerArn: arn:aws:elasticloadbalancing:us-east-2:066703160259:listener/app/sean-sdk-elb/f270f4e8b3f5fc0b/ced9033df0bf74f9
+    targetGroupArn: arn:aws:elasticloadbalancing:us-east-2:066703160259:targetgroup/sean-sdk-target1/f7ebbed48fb75633
     targets:
     - {Id: i-0ce0cd4127b2bfdcf, Port: 8090}
     - {Id: i-08fad2f58ad2e2faf, Port: 8090}
+  - listenerArn: arn:aws:elasticloadbalancing:us-east-2:066703160259:listener/app/sean-sdk-elb/f270f4e8b3f5fc0b/b5ab67eeb87bad6b
+    targetGroupArn: arn:aws:elasticloadbalancing:us-east-2:066703160259:targetgroup/sean-sdk-target2/11ecfd9a85c00cf5
+    targets:
+    - {Id: i-0ce0cd4127b2bfdcf, Port: 80}
+    - {Id: i-08fad2f58ad2e2faf, Port: 80}
