--- a/test/config.yml
+++ b/test/config.yml
@@ -6,7 +6,7 @@ ELB:
     name: jameson-elb
     scheme: internet-facing
     vpc: 233
-    subnetId:
+    subnetId: 
       - sg-5a391333
       - sg-5a391334
   TargetGroup:
@@ -39,16 +39,16 @@ Repositories:
 # portMapping: host port:container port
 TaskDef:
   -
-    name: jameson-taskdef
+    name: sean-taskdef
     taskRole: ecs-task-role
     container:
-      - name: jameson-test
+      - name: sean-container1
         image: 066703160259.dkr.ecr.us-east-2.amazonaws.com/inno/test:0.3
         hardMemory: 300
         softMemory: 200
         portMappings:
           - 80:80
-      - name: jameson-hello
+      - name: sean-container2
         image: 066703160259.dkr.ecr.us-east-2.amazonaws.com/inno/test:0.2
         hardMemory: 300
         softMemory: 200
