--- a/elb-info.yaml
+++ b/elb-info.yaml
@@ -1,8 +1,5 @@
 ELB:
-  LoadBalance: {DNSName: sean-sdk-elb-1134285965.us-east-2.elb.amazonaws.com, loadBalancerArn: 'arn:aws:elasticloadbalancing:us-east-2:066703160259:loadbalancer/app/sean-sdk-elb/f5af59e7ac95d0b3'}
+  LoadBalance: {DNSName: sean-sdk-elb-41244414.us-east-2.elb.amazonaws.com, loadBalancerArn: 'arn:aws:elasticloadbalancing:us-east-2:066703160259:loadbalancer/app/sean-sdk-elb/2f1a69346991f6d8'}
   TargetGroup:
-  - listenerArn: arn:aws:elasticloadbalancing:us-east-2:066703160259:listener/app/sean-sdk-elb/f5af59e7ac95d0b3/fef4e0b5c602a608
-    targetGroupArn: arn:aws:elasticloadbalancing:us-east-2:066703160259:targetgroup/sean-sdk-target1/44039d8f4cae255c
-    targets:
-    - {Id: i-0ce0cd4127b2bfdcf, Port: 8090}
-    - {Id: i-08fad2f58ad2e2faf, Port: 8090}
+  - {listenerArn: 'arn:aws:elasticloadbalancing:us-east-2:066703160259:listener/app/sean-sdk-elb/2f1a69346991f6d8/ab5c390875107563',
+    targetGroupArn: 'arn:aws:elasticloadbalancing:us-east-2:066703160259:targetgroup/sean-sdk-target1/183521642bbee68f'}
