--- a/test/ecs.yaml
+++ b/test/ecs.yaml
@@ -1,19 +1,19 @@
 Cluster:
   name: sean-sdk-cluster
   numberOfInstance: 2
-  instance: 
-      keypair: jameson-keypair
-      amiid: ami-34032e51
-      instancetype: t2.micro
-      iamarn: arn:aws:iam::066703160259:instance-profile/ecsInstanceRole
-      securitygroupid: 
-       - sg-5a391333
+  instance:
+    keypair: jameson-keypair
+    amiid: ami-34032e51
+    instancetype: t2.micro
+    iamarn: arn:aws:iam::066703160259:instance-profile/ecsInstanceRole
+    securitygroupid:
+    - sg-5a391333
   resource:
     cpu: 1
     memory: 1024
     ports:
-      - 22
-      - 80
+    - 22
+    - 80
 TaskDef:
   name: sean-sdk-taskdef
   taskRole: ecs-task-role
@@ -24,29 +24,28 @@ TaskDef:
     softMemory: 200
     portMappings:
     - 80:80
-    
 ELB:
   LoadBalance:
     name: sean-sdk-elb
     scheme: internet-facing
     subnetId:
-      - subnet-98a3d7f1
-      - subnet-67c77a1c
-      - subnet-ece528a1
-    securityGroup: 
-      - sg-5a391333
+    - subnet-98a3d7f1
+    - subnet-67c77a1c
+    - subnet-ece528a1
+    securityGroup:
+    - sg-5a391333
   TargetGroup:
-    - name: sean-sdk-target1
+  - name: sean-sdk-target1
+    protocol: HTTP
+    port: 80
+    listener:
       protocol: HTTP
       port: 80
-      listener:
-        protocol: HTTP
-        port: 80
-      vpcId: vpc-33c4a25a
-      healthCheckProtocol: HTTP
-      healthCheckPort: traffic-port
-      healthCheckPath: /
-      targetType: instance
+    vpcId: vpc-33c4a25a
+    healthCheckProtocol: HTTP
+    healthCheckPort: traffic-port
+    healthCheckPath: /
+    targetType: instance
 Service:
   name: sean-sdk-service
   cluster: sean-sdk-cluster
@@ -60,3 +59,8 @@ Service:
     field: instanceId
   placementConstraints:
   - type: distinctInstance
+AutoScaling:
+  name: web-app-cpu-gt-75
+  iamarn: arn:aws:iam::066703160259:role/ecsAutoscaleRole
+  maxCount: 5
+  minCount: 1
